src/objects/Value_Tracking_Metric__c.object
<CustomObject>
    <fields>
        <fullName>BillingCenter_BC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BillingCenter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indemnity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Productivity</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ClaimCenter_CC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ClaimCenter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Story_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Story Id</label>
        <referenceTo>Customer_Story__c</referenceTo>
        <relationshipLabel>Value Tracking Metrics</relationshipLabel>
        <relationshipName>Value_Tracking_Metrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <picklist>
            <picklistValues>
                <fullName>Business Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claim Cycle Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross-sell / Up-sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Experience/Retention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generic Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Litigation Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Leakage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Policy Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quotes and Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk Qualification / Rate Accuracy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speed to Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systems/IT Cost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Writeoffs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Improvement__c</fullName>
        <label>Raw Improvement</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric__c</fullName>
        <label>Metric</label>
        <picklist>
            <picklistValues>
                <fullName>3rd party capture rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual costs for paper and postage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual quote requests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average indemnity per litigated claim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average litigation expense per litigated claim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average premium per policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avoidable losses due to underwriting errors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capacity for simple (e.g. rate) changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claim litigation rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clerical workload (clerical productivity)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer retention rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer retention rate on claim filers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer service rep workload (CSR productivity)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Days of negative equity per cancelled policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duration of rental car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duration of temporary accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Files per billing FTE (billing productivity)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Files per claim handler (adjuster productivity)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Files per collections FTE (collections productivity)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Notice of Loss Duration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraud: Overall results</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraud denial rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraud referral rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraud withdrawal/abandonment rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FTE required to support system(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generic customer experience improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generic growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installment fees collected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late payment fees collected</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Result__c</fullName>
        <label>New Value</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Original__c</fullName>
        <label>Original Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <label>Percent Improvement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PolicyCenter_PC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PolicyCenter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Story_Sharing_Restriction__c</fullName>
        <formula>TEXT(Customer_Story_Id__r.Sharing_Restrictions__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Story Sharing Restriction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Value ($)</description>
        <label>Financial Improvement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Value Tracking Metric</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer_Story_Id__c</columns>
        <columns>Value__c</columns>
        <columns>Improvement__c</columns>
        <columns>Functional_Area__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Detail</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Functional_Area__c</columns>
        <columns>Metric__c</columns>
        <columns>Original__c</columns>
        <columns>New_Result__c</columns>
        <columns>Improvement__c</columns>
        <columns>Percent__c</columns>
        <columns>Value__c</columns>
        <columns>Story_Sharing_Restriction__c</columns>
        <columns>Customer_Story_Id__c</columns>
        <columns>BillingCenter_BC__c</columns>
        <columns>ClaimCenter_CC__c</columns>
        <columns>PolicyCenter_PC__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>Detail</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Detail_without_Customer_Story</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Functional_Area__c</columns>
        <columns>Metric__c</columns>
        <columns>Original__c</columns>
        <columns>New_Result__c</columns>
        <columns>Improvement__c</columns>
        <columns>Percent__c</columns>
        <columns>Value__c</columns>
        <columns>Customer_Story_Id__c</columns>
        <columns>BillingCenter_BC__c</columns>
        <columns>ClaimCenter_CC__c</columns>
        <columns>PolicyCenter_PC__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Customer_Story_Id__c</field>
            <operation>equals</operation>
        </filters>
        <label>Detail without Customer Story</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Summary</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Functional_Area__c</columns>
        <columns>Metric__c</columns>
        <columns>Story_Sharing_Restriction__c</columns>
        <columns>Customer_Story_Id__c</columns>
        <columns>BillingCenter_BC__c</columns>
        <columns>ClaimCenter_CC__c</columns>
        <columns>PolicyCenter_PC__c</columns>
        <filterScope>Everything</filterScope>
        <label>Summary</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>M-{000000}</displayFormat>
        <label>Metrics Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Value Tracking Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>